# openGLTwo

./: .gitignore  CMakeLists.txt  CMakelists.txt  HELP.txt  build.bat  build.txt  buildCmake.sh  buildConan.sh  buildConanForWindows.sh  cmakeBuild.sh  conanbuild.sh  conanfile.py  configBuild.h  configBuild.h.in
cmake/: Findglfw3.cmake  compileFlags.h.in
shaders/: basic.shader  cubeFrag.txt  cubeVert.txt  fragmentOne.txt  lightFrag.txt  lightVert.txt  lighting.shader
src/: assetManager.h  camera.h  configBuild.h  cube.h  enetClient.h  enetHelpers.h  enetHost.cpp  enetImplementation.h  enetPacket.h  enetTemplates.h  entity.cpp  entity.h  gameState.cpp  gameState.h  globals.h  includes.h  indexBuffer.cpp  indexBuffer.h  main.cpp  material.h  mesh.h  object.cpp  object.h  oldmain.cpp  renderer.cpp  renderer.h  shader.h  shapes.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h  widgets.h
